config/deployer/k8s/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ramtun-client
  namespace: ramtun
  labels:
    app: ramtun-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ramtun-client
  template:
    metadata:
      labels:
        app: ramtun-client
    spec:
      containers:
        - name: client
          image: ghcr.io/mrrevillod/ramtun-client:sha-5668e7b
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
