config/deployer/k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramtun-client
spec:
  selector:
    app: ramtun-client
  ports:
    - name: http
      port: 80
      targetPort: 80
