config/deployer/k8s/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ramtun
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ramtun-client
                port:
                  number: 80
